--- a/src/utility/templates/welcome-worker.html
+++ b/src/utility/templates/welcome-worker.html
@@ -460,9 +460,9 @@
       <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
         <tr>
           <td class="email-masthead">
-            <a href="https://dcworkers.netlify.app/" class="f-fallback email-masthead_name">
-              RCCG Discovery Centre Workers
-            </a>
+            <img src="https://i.ibb.co/cX1MnZ5z/DC-LOGO.png" alt="Logo"
+                 style="width: 100px; height: 50px; vertical-align: middle; margin-right: 5px;" />
+            <strong>RCCG Discovery Centre Workers Platform</strong>
           </td>
         </tr>
         <!-- Email Body -->
@@ -477,23 +477,23 @@
                     <h1>Welcome, {{name}}!</h1>
                     <p>We’re excited to let you know that you've been successfully onboarded to the RCCG Discovery
                       Centre Workers platform.</p>
-                    <p>Here’s everything you need to get started:</p>
+                    <!--                    <p>Here’s everything you need to get started:</p>-->
 
-                    <!-- Action Button -->
-                    <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0"
-                           role="presentation">
-                      <tr>
-                        <td align="center">
-                          <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                            <tr>
-                              <td align="center">
-                                <a href="{{login_url}}" class="f-fallback button" target="_blank">Go to the Platform</a>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
+                    <!--                    &lt;!&ndash; Action Button &ndash;&gt;-->
+                    <!--                    <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0"-->
+                    <!--                           role="presentation">-->
+                    <!--                      <tr>-->
+                    <!--                        <td align="center">-->
+                    <!--                          <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">-->
+                    <!--                            <tr>-->
+                    <!--                              <td align="center">-->
+                    <!--                                <a href="{{login_url}}" class="f-fallback button" target="_blank">Go to the Platform</a>-->
+                    <!--                              </td>-->
+                    <!--                            </tr>-->
+                    <!--                          </table>-->
+                    <!--                        </td>-->
+                    <!--                      </tr>-->
+                    <!--                    </table>-->
 
                     <p><strong>Your login credentials:</strong></p>
                     <table class="attributes" width="100%" cellpadding="0" cellspacing="0" role="presentation">
@@ -502,7 +502,7 @@
                           <table width="100%" cellpadding="0" cellspacing="0" role="presentation">
                             <tr>
                               <td class="attributes_item">
-                                <span class="f-fallback"><strong>Login URL:</strong> {{login_url}}</span>
+                                <span class="f-fallback"><strong>Website URL:</strong> {{login_url}}</span>
                               </td>
                             </tr>
                             <tr>
@@ -521,13 +521,13 @@
                     </table>
 
                     <p>To make things easier, we’ve created a quick explainer video on how to install and access the web
-                      app on your device:</p>
+                      app on your device: </p>
                     <p>
-                      <a href="{{explainer_video_url}}" target="_blank">Watch Installation Guide</a>
+                      <a href="{{explainer_video_android_url}}" target="_blank">Android Installation Guide</a> <br>
+                      <a href="{{explainer_video_ios_url}}" target="_blank">IOS Installation Guide</a>
                     </p>
 
-                    <p>If you have any questions or need help, feel free to <a href="mailto:{{support_email}}">contact
-                      our support team</a>.</p>
+                    <p>If you have any questions or need help, feel fill <a href="{{support_form_url}}" target="_blank">this form</a>, we will get back to you.</p>
                     <p>Welcome aboard!
                       <br>
                       RCCG Discovery Centre Team</p>
