made minor adjustment to worker welcome email template

--- a/src/utility/templates/welcome-worker.html
+++ b/src/utility/templates/welcome-worker.html
@@ -462,7 +462,7 @@
           <td class="email-masthead">
             <img src="https://i.ibb.co/cX1MnZ5z/DC-LOGO.png" alt="Logo"
                  style="width: 100px; height: 50px; vertical-align: middle; margin-right: 5px;" />
-            <strong>RCCG Discovery Centre Workers Platform</strong>
+            <strong>RCCG Discovery Centre</strong>
           </td>
         </tr>
         <!-- Email Body -->
@@ -476,7 +476,7 @@
                   <div class="f-fallback">
                     <h1>Welcome, {{name}}!</h1>
                     <p>We’re excited to let you know that you've been successfully onboarded to the RCCG Discovery
-                      Centre Workers platform.</p>
+                      Centre Staff platform.</p>
                     <!--                    <p>Here’s everything you need to get started:</p>-->
 
                     <!--                    &lt;!&ndash; Action Button &ndash;&gt;-->
@@ -507,7 +507,7 @@
                             </tr>
                             <tr>
                               <td class="attributes_item">
-                                <span class="f-fallback"><strong>Username:</strong> {{username}}</span>
+                                <span class="f-fallback"><strong>Email:</strong> {{username}}</span>
                               </td>
                             </tr>
                             <tr>
@@ -520,28 +520,28 @@
                       </tr>
                     </table>
 
-                    <p>To make things easier, we’ve created a quick explainer video on how to install and access the web
-                      app on your device: </p>
+                    <p>To make things easier, we’ve created a quick explainer video on how to install and access the website as an
+                      app on your mobile device: </p>
                     <p>
                       <a href="{{explainer_video_android_url}}" target="_blank">Android Installation Guide</a> <br>
                       <a href="{{explainer_video_ios_url}}" target="_blank">IOS Installation Guide</a>
                     </p>
 
-                    <p>If you have any questions or need help, feel fill <a href="{{support_form_url}}" target="_blank">this form</a>, we will get back to you.</p>
+                    <p>If you have any questions or need help, feel fill <a href="{{support_form_url}}" target="_blank">this form</a>; we will get back to you.</p>
                     <p>Welcome aboard!
                       <br>
-                      RCCG Discovery Centre Team</p>
+                      RCCG Discovery Centre Dev Team</p>
 
                     <!-- Sub copy -->
-                    <table class="body-sub" role="presentation">
-                      <tr>
-                        <td>
-                          <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste this
-                            URL into your browser:</p>
-                          <p class="f-fallback sub">{{login_url}}</p>
-                        </td>
-                      </tr>
-                    </table>
+<!--                    <table class="body-sub" role="presentation">-->
+<!--                      <tr>-->
+<!--                        <td>-->
+<!--                          <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste this-->
+<!--                            URL into your browser:</p>-->
+<!--                          <p class="f-fallback sub">{{login_url}}</p>-->
+<!--                        </td>-->
+<!--                      </tr>-->
+<!--                    </table>-->
                   </div>
                 </td>
               </tr>
